--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" id="home" href="/">Home</a>
+        </div>
       </div>
     </nav>
 
